add 2nd part of challenge 1